--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,14 @@
     <string name="login">Login</string>
     <string name="register_here">Register Here.</string>
     <string name="transportation_inc">Transportation inc</string>
+    <string name="car_picture">Car Picture</string>
+    <string name="manufacturer">Manufacturer:</string>
+    <string name="model">Model:</string>
+    <string name="caryear">Year:</string>
+    <string name="price">Price:</string>
+    <string name="registartion_number">Registartion Number:</string>
+    <string name="date_to">Date To:</string>
+    <string name="date_from">Date From:</string>
+    <string name="place_to_pick_a_car">Place to pick a car:"</string>
+    <string name="no_information">No information</string>
 </resources>
